--- a/src/app/modules/main/pages/home/home.component.css
+++ b/src/app/modules/main/pages/home/home.component.css
@@ -110,6 +110,15 @@ option {
   background-color: #012942;
 }
 
+input[type='number'] {
+  appearance:textfield;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+}
+
 /* FIFTH */
 
 .fifth {
