--- a/src/app/modules/main/pages/home/home.component.html
+++ b/src/app/modules/main/pages/home/home.component.html
@@ -144,7 +144,7 @@
           </div>
           <div class="search-form-field" style="width: 30%;">
             <label class="form-label pt-1"><i class="bi bi-currency-dollar"></i>&nbsp;Imóvel até</label>
-            <input formControlName="price" type="text" class="form-control input-style" placeholder="Insira o valor">
+            <input formControlName="price" type="number" class="form-control input-style" placeholder="Insira o valor">
           </div>
           <div class="search-form-field" style="width: 20%;">
             <label class="form-label pt-1">&nbsp;Quartos</label>
@@ -211,7 +211,7 @@
           </div>
           <div class="search-form-field rounded-3 w-100 mb-3">
             <label class="form-label pt-1"><i class="bi bi-currency-dollar"></i>&nbsp;Imóvel até</label>
-            <input formControlName="price" type="text" class="form-control input-style" placeholder="Insira o valor">
+            <input formControlName="price" type="number" class="form-control input-style" placeholder="Insira o valor">
           </div>
           <div class="search-form-field rounded-3 w-50">
             <label class="form-label pt-1">&nbsp;Quartos</label>
